2006-10-05  ARAKI Yasuhiro  <yasu@debian.or.jp>

	* donrails-1.3.3

	* donrails/app/controllers/login_controller.rb (LoginController::new_article): Fix for initial setup.
	(LoginController::add_article): likewise.

	* INSTALL.ja: Refine it.

	* Makefile: Add installertest.
	* donrails/example/database-installertest.yml: New file for it.
	* donrails/example/.environment.rb: likewise.

	* donrails/tool/tables-{postgresql,sqlite}.sql: filename change (.txt -> .sql)
	

2006-10-05  Akira TAGOH  <at@gclab.org>

	* donrails/lib/modules/moinmoin.rb: MoinMoin parser.

2006-10-04  ARAKI Yasuhiro  <yasu@debian.or.jp>

	* donrails/tool/tables-mysql.sql: Fix for donrails-1.3
	* donrails/tool/tables-sqlite.txt: Fix for donrails-1.3

2006-10-04  Akira TAGOH  <at@gclab.org>

	* donrails/lib/modules/wiliki.rb (DonRails::Wiliki::title_to_html):
	fixed regexp to deal with nested bold/italic-syntax.
	(DonRails::Wiliki::body_to_html): likewise.

2006-10-01  ARAKI Yasuhiro  <yasu@debian.or.jp>

	* donrails/app/views/notes/index.rhtml: Fix to apply theme.

	* donrails/app/views/shared/default/comment.rhtml: move this file from shared/comment.rhtml.

	* donrails/app/views/notes/pick_article_a2.rhtml: Fix to use shared/comment.

	* rails/app/views/layouts/default/notes.rhtml: Fix: File path.

2006-09-30  ARAKI Yasuhiro  <yasu@debian.or.jp>

	* donrails/test/unit/enrollment_test.rb (EnrollmentTest::test_2): Clanup.
	* donrails/test/functional/login_controller_test.rb: Add some test.
	* donrails/test/functional/notes_controller_test.rb: Change date to more futer.
	* donrails/test/fixtures/articles.yml: Add to test trackback.

	* donrails/app/models/enrollment.rb: remove unused enrollment cleanu function to article.rb.
	* donrails/app/models/article.rb: likewise.
	
	* donrails/app/controllers/login_controller.rb (LoginController::delete_enrollment): Cleanup.

	* donrails/app/models/article.rb (Article::enrollclean): New method. Add to remove unused enrollment.

	