@@ -1,3 +1,8 @@
+2006-10-06  Akira TAGOH  <at@gclab.org>
+
+	* donrails/lib/modules/moinmoin.rb (DonRails::Moinmoin::body_to_html):
+	fixed the different behavior on the definition list.
+
 2006-10-05  ARAKI Yasuhiro  <yasu@debian.or.jp>
 
 	* donrails-1.3.3
